--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Arrow Delegation</h1>
-        <p>this is where you put in something. It should probably have your number just so's it super-available.</p>
+        <p>Food and grocery delivery for the Eugene area.</p>
         <p>and then here is where we have something about the service area</p>
         <p>and also this layout is incredibly fucking generic. You really want something way more unique.</p>
         <p>like, literally as generic as it gets. This is straight-up Twitter bootstrap shit. At the very least, you need a custom theme</p>
