update with actual content

--- a/daytime/index.html
+++ b/daytime/index.html
@@ -41,6 +41,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/daytime/">Daytime</a></li>
                 <li><a href="/late/">Late Night</a></li>
+                <li><a href="tel:5418701119">(541) 870-1119</a></li>
             </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -50,7 +51,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Arrow Delegation</h1>
-        <p>541-123-4567</p>
+        <p>Food and grocery delivery for the Eugene area.</p>
       </div>
     </div>
 
