--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/daytime/">Daytime</a></li>
-                <li><a href="/late/">Late Night</a></li>
+                <!--<li><a href="/daytime/">Daytime</a></li>
+                <li><a href="/late/">Late Night</a></li>-->
+                <li><a href="tel:5418701119">(541) 870-1119</a></li>
             </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -51,10 +52,6 @@
       <div class="container">
         <h1>Arrow Delegation</h1>
         <p>Food and grocery delivery for the Eugene area.</p>
-        <p>and then here is where we have something about the service area</p>
-        <p>and also this layout is incredibly fucking generic. You really want something way more unique.</p>
-        <p>like, literally as generic as it gets. This is straight-up Twitter bootstrap shit. At the very least, you need a custom theme</p>
-        <p>also probably a real designer</p>
       </div>
     </div>
 
@@ -62,15 +59,108 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
-          <h2>Daytime</h2>
-          <p>This is a brief paragraph about the grocery/RX delivery</p>
-          <p><a class="btn btn-default" href="/daytime/" role="button">View details &raquo;</a></p>
+            <h2>Hours</h2>
+            <table class="table table-striped table-bordered table-condensed">
+                <tr>
+                    <td>mon</td>
+                    <td colspan="2">midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>tues</td>
+                    <td colspan="2">midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>wed</td>
+                    <td>7 to 10*</td>
+                    <td>midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>thurs</td>
+                    <td>7 to 10*</td>
+                    <td>midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>fri</td>
+                    <td>7 to 10*</td>
+                    <td>midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>sat</td>
+                    <td>7 to 10*</td>
+                    <td>midnight to 5 am</td>
+                </tr>
+                <tr>
+                    <td>sun</td>
+                    <td colspan="2">midnight to 5 am</td>
+                </tr>
+            </table>
+            <p>* On select evenings, from 7-10pm, we also deliver from <a href="http://www.thezingaro.com/home/">The Zingaro</a>, Eugene's premier source of comfort fusion food</p>
         </div>
         <div class="col-md-6">
-          <h2>Late night</h2>
-          <p>This is a brief paragraph about the late night shit. Mention the hours here. Also, do you have hours for the daytime stuff? Because if so, mention it. Actually, now that I think about it there should be explicit hours posted somewhere up top.</p>
-          <p><a class="btn btn-default" href="/late/" role="button">View details &raquo;</a></p>
-       </div>
+            <h2>Pricing and Payment</h2>
+            <p>The standard cost of delivery is 5 dollars, plus the cost of the food/items. You can have 6 items delivered for this price</p>
+            <p>There is an accounting fee of 1 dollar, but this is rebated/waived when paying with cash.</p>
+            <ul>
+                <li>Every 6 additional items add a 2 dollar charge.</li>
+                <li>Extra locations add a 2 dollar charge.</li>
+                <li>If any location(s) (including delivery location,) is outside of our area of operation, we may still offer to accept the order with an extra charge, most likely 2-4 dollars. In the event that we are experiencing a high number of orders, we may not be able to facilitate such a request.</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+            
+            <h2>Locations</h2>
+            <p>From midnight until 5am, we deliver from many places within our service area, including (but not limited to) all of the following.</p>
+            <p><small>please note that these hours are taken from the storefront of the buildings. we cannot guarantee or enforce the hours of these businesses! Also, we do not periodically check to see if the hours have changed. We are not directly affiliated with any of the business listed, we just deliver from them. Links were found via the listed sites of the businesses.</small></p>
+
+
+            <table class="table table-striped table-bordered table-condensed">
+                <tr><td colspan=2>Shari's</td><td><a href="http://www.snapfinger.com/menus/sharis/default.aspx?SiteID=17594">Menu</a></td></tr>
+                <tr><td colspan=2>Denny's</td><td><a href="http://www.dennys.com/files/general_menu.pdf">their menu pdf</a></td></tr>
+                <tr><td colspan=2>Burrito Boy</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
+                <tr><td colspan=2>Jack in the box </td><td><a href="http://www.jackinthebox.com/food">Food</a></td></tr>
+                <tr><td colspan=2>McDonalds </td><td><a href="http://www.mcdonalds.com/us/en/food.html">Food</a></td></tr>
+                <tr><td colspan=2>7-11 </td><td><a href="https://www.7-eleven.com/">their site</a></td></tr>
+                <tr><td>Taco Bell</td><td>open until 3 am, 4 am on fri and sat</td><td><a href="http://www.tacobell.com/food/tacos">Menu</a></td></tr>
+                <tr><td>Safeway</td><td colspan=2>open until 2am</td></tr>
+                <tr><td>Pita Pit</td><td colspan=2>open until 2am on Thurs, Fri, and Sat</td></tr>
+                <tr><td>Off The Waffle</td><td>open until 3 Thurs, Fru and Sat  </td><td><a href="http://offthewaffle.com/Liege-Menu.pdf">their menu pdf</a></td></tr>
+                <tr><td>Dough Co</td><td>until 3am (they have in-house delivery, but if you are outside their delivery range you might not be outside ours)</td><td><a href="http://www.doughco.com/delivery/">Delivery Area</a>. There is a link to their menu at the top of their page.</td></tr>
+            </table>
+
+            <p><strong>Below are locations that are outside our service area, but we may still deliver from them with an 'outside service area' charge (typically an extra 2-4 dollars) if we are not currently experiencing a large volume of orders.</strong></p>
+            <table class="table table-striped table-bordered table-condensed">
+                <tr><td>IHOP</td><td><a href="http://www.ihop.com/menus/main-menu">Full Menu</a></td></tr>
+                <tr><td>WINCO</td><td>open 24 hours</td></tr>
+            </table>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+            <h2>What We Do</h2>
+            <p>We deliver from any place that is open and will serve, within our area of operation. It is asked that you not order from a location that is 15 minutes (or less) from closing, for best results.</p>
+            <p>We accept debit and credit cards, accept American Express and Paypal (or similar institutions.)</p>
+        </div>
+        <div class="col-md-6">
+            <h2>What We Don't Do</h2>
+            <ul>
+                <li>We do not accept checks, paypal,American Express, bitcoin (or the like,) foreign currency, or barter.</li>
+                <li>We do not allow customers to 'ride along' on deliveries, nor does our service charge to deliver people to a location.</li>
+                <li>We do not currently deliver age restricted items (adult material, cigarettes, alcohol.)</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+            <h2>Contact Info</h2>
+            <p><a href="tel:5418701119">(541) 870-1119</a><p>
+            <p><a href="mailto:ArrowDelegation@live.com">ArrowDelegation@live.com</a></p>
+            <p><a href="www.facebook.com/ArrowDelegation">www.facebook.com/ArrowDelegation</a></p>
+        </div>
       </div>
 
       <hr>
@@ -78,11 +168,10 @@
       <footer>
         <p>&copy; Arrow Delegation 2014</p>
       </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
-        <script src="/js/vendor/bootstrap.min.js"></script>
-
-        <script src="/js/main.js"></script>
+    </div><!-- /container -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
+    <script src="/js/main.js"></script>
     </body>
 </html>
