--- a/late/index.html
+++ b/late/index.html
@@ -41,6 +41,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/daytime/">Daytime</a></li>
                 <li class="active"><a href="/late/">Late Night</a></li>
+                <li><a href="tel:5418701119">(541) 870-1119</a></li>
             </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -50,74 +51,39 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Arrow Delegation</h1>
-        <p>541-123-4567</p>
+        <p>Food and grocery delivery for the Eugene area.</p>
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-6">
-            <p>Daytime errands are by appointment, requiring up to 3 hours advanced notice. You probably want this to be bigger. How much bigger? Up to you.</p>
-            <p>Also, this entire section is an exact copy of the daytime section. Not just because I'm lazy! It's to show you some of the ways these styles can be combined.</p>
-            <p>Seriously, all this shit is crazy responsive. Try running it through <a href="http://bradfrostweb.com/demo/ish/">Ish</a>, the responsive design tester. It'll give you a good idea of how the site will work on mobile.</p>
-            <h2>Pricing &amp; Payment</h2>
-            <p>holy shit, we charge so much money, like crazy dolla dolla bills y'all. You definitely can't afford this service. It's stupid to even think you can. What are you, stupid or something? Yeah, you stupid. Fuck off.</p>
-            <p>Anyway, there are all kinds of ways we can format this content. Do you want to do paragraphs like this? Or bulleted lists?</p>
-            <h2>What We Do</h2>
-            <p>Bunch of shit goes here, it's like crazy how much or how little you can type. Like, this right here is a very medium amount and then we can list some things</p>
-            <h3>What we do in CRAZY DETAIL</h3>
-            <ul>
-                <li>this thing that we totally do</li>
-                <li>this other thing that we also do</li>
-                <li>yeah, I guess we also do this thing</li>
-                <li>are you seriously still reading? Because if you're reading this far, not only are you reading too far but you're also reading what it looks like to read something in this list that is way too long. Like, probably longer than you actually need to care about.</li>
-                <li>now THIS item, on the other hand, is pretty damn long but still reasonably long. Not too long, but just long enough that design should still care.</li>
-            </ul>
-            <h2>What We Don't Do</h2>
-            <p>What we don't do anymore is bulleted lists. Because you've already seen what that looks like. Lesse, what else can we do?</p>
-            <ol>
-                <li>we</li>
-                <li>can</li>
-                <li>do</li>
-                <li>numbered</li>
-                <li>lists</li>
-            </ol>
-            <p>God, but those are so gauche. Oh, I have an idea!</p>
-            <dl>
-                <dt>Definition Lists</dt>
-                <dd>These are a cool way of putting together a short descriptive phrase and a long, in-depth detailed description of the thing you're trying to describe.</dd>
-                <dt>Description</dt>
-                <dd>Is a word that is very easy to over-use when trying to <strike>describe</strike> talk about definition lists and what they are used for.</dd>
-            </dl>
-        </div>
-        <div class="col-md-6">
-            <h2>What's Open?</h2>
-            <hr>
-            <dl>
-                <dt>Oh man</dt>
-                <dd>This is a great way to use these definition lists.</dd>
-                <dd>What all can we do with them? Well, we can have multiple little text snippets</dd>
-                <dt>What else?</dt>
-                <dd><ul>
-                    <li>Holy shit!</li>
-                    <li>We can do lists, too</li>
-                    <li>But I bet we can do more</li>
-                </ul></dd>
-                <dt>Awwww, yeah</dt>
-                <dd>
-                    <dl class="col-md-6">
-                        <dt>Recursion, bitch</dt>
-                        <dd>That's the beauty of HTML, we can nest all these crazy things inside each other.</dd>
-                    </dl>
-                    <dl class="col-md-6">
-                        <dt>Recursion, bitch</dt>
-                        <dd>That's the beauty of HTML, we can nest all these crazy things inside each other.</dd>
-                    </dl>
-                </dd>
-                <dt>Also, check it</dt>
-                <dd>Those two nested things above this totally turn into a single column if you make the browser super-skinny. Or, if, say, you're viewing it on a mobile device. You know what that means? That means this site is responsive, bitch.</dd>
-            </dl>
+        <div class="col-md-12">
+            <h2>What's in Eugene That's Open?</h2>
+            <p>We have compiled a fairly complete list of locations.</p>
+            <p><small>please note that these hours are taken from the storefront of the buildings. we cannot guarantee or enforce the hours of these businesses! Also, we do not periodically check to see if the hours have changed. We are not directly affiliated with any of the business listed, we just deliver from them. Links were found via the listed sites of the businesses.</small></p>
+
+
+            <table class="table table-striped table-bordered table-condensed">
+                <tr><td colspan=2>Shari's</td><td><a href="http://www.snapfinger.com/menus/sharis/default.aspx?SiteID=17594">Menu</a></td></tr>
+                <tr><td colspan=2>Denny's</td><td><a href="http://www.dennys.com/files/general_menu.pdf">their menu pdf</a></td></tr>
+                <tr><td colspan=2>Burrito Boy</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
+                <tr><td colspan=2>Jack in the box </td><td><a href="http://www.jackinthebox.com/food">Food</a></td></tr>
+                <tr><td colspan=2>McDonalds </td><td><a href="http://www.mcdonalds.com/us/en/food.html">Food</a></td></tr>
+                <tr><td colspan=2>7-11 </td><td><a href="https://www.7-eleven.com/">their site</a></td></tr>
+                <tr><td>Taco Bell</td><td>open until 3 am, 4 am on fri and sat</td><td><a href="http://www.tacobell.com/food/tacos">Menu</a></td></tr>
+                <tr><td>Safeway</td><td colspan=2>open until 2am</td></tr>
+                <tr><td>Pita Pit</td><td colspan=2>open until 2am on Thurs, Fri, and Sat</td></tr>
+                <tr><td>Off The Waffle</td><td>open until 3 Thurs, Fru and Sat  </td><td><a href="http://offthewaffle.com/Liege-Menu.pdf">their menu pdf</a></td></tr>
+                <tr><td>Dough Co</td><td>until 3am (they have in-house delivery, but if you are outside their delivery range you might not be outside ours)</td><td><a href="http://www.doughco.com/delivery/">Delivery Area</a>. There is a link to their menu at the top of their page.</td></tr>
+            </table>
+
+            <p><strong>Below are locations that are outside our service area, but we may still deliver from them with an 'outside service area' charge (typically an extra 2-4 dollars) if we are not currently experiencing an large volume of orders.</strong></p>
+                                                                   |
+            <table class="table table-striped table-bordered table-condensed">
+                <tr><td>IHOP</td><td><a href="http://www.ihop.com/menus/main-menu">Full Menu</a></td></tr>
+                <tr><td>WINCO</td><td>open 24 hours</td></tr>
+            </table>
+            
         </div>
       </div>
 
