--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="col-md-6">
             <h2>What We Do</h2>
             <p>We deliver from any place that is open and will serve, within our area of operation. It is asked that you not order from a location that is 15 minutes (or less) from closing, for best results.</p>
-            <p>We accept debit and credit cards, accept American Express and Paypal (or similar institutions.)</p>
+            <p>We accept debit and credit cards, except American Express and Paypal (or similar institutions.)</p>
         </div>
         <div class="col-md-6">
             <h2>What We Don't Do</h2>
