--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 <tr><td>Taco Bell</td><td>open until 3 am, 4 am on fri and sat</td><td><a href="http://www.tacobell.com/food/tacos">Menu</a></td></tr>
                 <tr><td>Safeway</td><td colspan=2>open until 2am</td></tr>
                 <tr><td>Pita Pit</td><td colspan=2>open until 2am on Thurs, Fri, and Sat</td></tr>
-                <tr><td>Off The Waffle</td><td>open until 3 Thurs, Fru and Sat  </td><td><a href="http://offthewaffle.com/Liege-Menu.pdf">their menu pdf</a></td></tr>
-                <tr><td>Dough Co</td><td>until 3am (they have in-house delivery, but if you are outside their delivery range you might not be outside ours)</td><td><a href="http://www.doughco.com/delivery/">Delivery Area</a>. There is a link to their menu at the top of their page.</td></tr>
+                <tr><td>Riva's Taco shop</td><td>ope 24 hours</td><td><a href=http://www.viewmenu.com/rivas-taco-shop/menu?ref=google>their menu pdf</a></td></tr>
+                <tr><td>Dough Co</td><td>Lobby until 1 am (they have in-house delivery, but if you are outside their delivery range you might not be outside ours)</td><td><a href="http://www.doughco.com/delivery/">Delivery Area</a>. There is a link to their menu at the top of their page.</td></tr>
             </table>
 
             <p><strong>Below are locations that are outside our service area, but we may still deliver from them with an 'outside service area' charge (typically an extra 2-4 dollars) if we are not currently experiencing a large volume of orders.</strong></p>
