--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <tr><td>Taco Bell</td><td>open until 3 am, 4 am on fri and sat</td><td><a href="http://www.tacobell.com/food/tacos">Menu</a></td></tr>
                 <tr><td>Safeway</td><td colspan=2>open until 2am</td></tr>
                 <tr><td>Pita Pit</td><td colspan=2>open until 2am on Thurs, Fri, and Sat</td></tr>
-                <tr><td>Riva's Taco shop</td><td>ope 24 hours</td><td><a href=http://www.viewmenu.com/rivas-taco-shop/menu?ref=google>their menu</a></td></tr>
+                <tr><td>Riva's Taco shop</td><td>open 24 hours</td><td><a href=http://www.viewmenu.com/rivas-taco-shop/menu?ref=google>their menu</a></td></tr>
                 <tr><td>Dough Co</td><td>Lobby until 1 am (they have in-house delivery, but if you are outside their delivery range you might not be outside ours)</td><td><a href="http://www.doughco.com/delivery/">Delivery Area</a>. There is a link to their menu at the top of their page.</td></tr>
             </table>
 
