--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                 </tr>
                 <tr>
                     <td>wed</td>
-                    <td>7 to 10*</td>
+                    <td>-</td>
                     <td>midnight to 5 am</td>
                 </tr>
                 <tr>
                     <td>thurs</td>
-                    <td>7 to 10*</td>
+                    <td>-</td>
                     <td>midnight to 5 am</td>
                 </tr>
                 <tr>
@@ -86,7 +86,7 @@
                 </tr>
                 <tr>
                     <td>sat</td>
-                    <td>7 to 10*</td>
+                    <td>-</td>
                     <td>midnight to 5 am</td>
                 </tr>
                 <tr>
@@ -94,7 +94,7 @@
                     <td colspan="2">midnight to 5 am</td>
                 </tr>
             </table>
-            <p>* On select evenings, from 7-10pm, we also deliver from <a href="http://www.thezingaro.com/home/">The Zingaro</a>, Eugene's premier source of comfort fusion food</p>
+            <p>* > On select evenings, food and grocery runs may be set up in advance for the times listed. These earlier hours sometimes changes, so please refer back to this list before placing an order.</p>
         </div>
         <div class="col-md-6">
             <h2>Pricing and Payment</h2>
