--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <td colspan="2">midnight to 5 am</td>
                 </tr>
             </table>
-            <p>* > On select evenings, food and grocery runs may be set up in advance for the times listed. These earlier hours sometimes changes, so please refer back to this list before placing an order.</p>
+            <p>* > On select evenings, food and grocery runs may be set up in advance for the times listed. These earlier hours sometimes change, so please refer back to this list before placing an order.</p>
         </div>
         <div class="col-md-6">
             <h2>Pricing and Payment</h2>
