--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
         <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="/css/main.css">
-
-        <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="./css/main.css">
+        <script src="./js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -49,9 +46,18 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <div class="container">
-        <h1>Arrow Delegation</h1>
-        <p>Food and grocery delivery for the Eugene area.</p>
+      <div class="container row">
+        <div class="col-md-9">
+            <h1>Arrow Delegation</h1>
+            <p>Food and grocery delivery for the Eugene area.</p>
+        </div>
+          <div class="col-md-3">
+              <div class="text-center">
+                  <img style="max-width: 125px;" class="deliveryImg" src="./img/delivery-off.jpg">
+                  <p class="deliveryCaption">Preparing for Deliveries</p>
+                  <p style="display: none" class="deliveryNote"></p>
+              </div>
+          </div>
       </div>
     </div>
 
@@ -63,10 +69,12 @@
             <table class="table table-striped table-bordered table-condensed">
                 <tr>
                     <td>mon</td>
+                    <td>-</td>
                     <td colspan="2">midnight to 5 am</td>
                 </tr>
                 <tr>
                     <td>tues</td>
+                    <td>-</td>
                     <td colspan="2">midnight to 5 am</td>
                 </tr>
                 <tr>
@@ -91,6 +99,7 @@
                 </tr>
                 <tr>
                     <td>sun</td>
+                    <td>-</td>
                     <td colspan="2">midnight to 5 am</td>
                 </tr>
             </table>
@@ -166,12 +175,13 @@
       <hr>
 
       <footer>
-        <p>&copy; Arrow Delegation 2014</p>
+        <p>&copy; Arrow Delegation <script>document.write(new Date().getFullYear())</script></p>
       </footer>
     </div><!-- /container -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="/js/vendor/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="./js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    <script src="./js/vendor/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/schedule-toggle.js"></script>
     </body>
 </html>
