--- a/late/index.html
+++ b/late/index.html
@@ -66,7 +66,7 @@
             <table class="table table-striped table-bordered table-condensed">
                 <tr><td colspan=2>Shari's</td><td><a href="http://www.snapfinger.com/menus/sharis/default.aspx?SiteID=17594">Menu</a></td></tr>
                 <tr><td colspan=2>Denny's</td><td><a href="http://www.dennys.com/files/general_menu.pdf">their menu pdf</a></td></tr>
-                <tr><td colspan=2>Burrito Boy Wednesday through Saturday 24 hours</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
+                <tr><td colspan=2>Burrito Boy</td><td>Wednesday through Saturday 24 hours</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
                 <tr><td colspan=2>Jack in the box </td><td><a href="http://www.jackinthebox.com/food">Food</a></td></tr>
                 <tr><td colspan=2>McDonalds </td><td><a href="http://www.mcdonalds.com/us/en/food.html">Food</a></td></tr>
                 <tr><td colspan=2>7-11 </td><td><a href="https://www.7-eleven.com/">their site</a></td></tr>
