--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <table class="table table-striped table-bordered table-condensed">
                 <tr><td colspan=2>Shari's</td><td><a href="http://www.snapfinger.com/menus/sharis/default.aspx?SiteID=17594">Menu</a></td></tr>
                 <tr><td colspan=2>Denny's</td><td><a href="http://www.dennys.com/files/general_menu.pdf">their menu pdf</a></td></tr>
-                <tr><td colspan=2>Burrito Boy</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
+                <tr><td colspan=2>Burrito Boy</td><td> Wednesday through Saturday 24 hours</td><td><a href="http://www.burritoboy.com/menu.html">Menu</a></td></tr>
                 <tr><td colspan=2>Jack in the box </td><td><a href="http://www.jackinthebox.com/food">Food</a></td></tr>
                 <tr><td colspan=2>McDonalds </td><td><a href="http://www.mcdonalds.com/us/en/food.html">Food</a></td></tr>
                 <tr><td colspan=2>7-11 </td><td><a href="https://www.7-eleven.com/">their site</a></td></tr>
@@ -151,12 +151,12 @@
         <div class="col-md-6">
             <h2>What We Do</h2>
             <p>We deliver from any place that is open and will serve, within our area of operation. It is asked that you not order from a location that is 15 minutes (or less) from closing, for best results.</p>
-            <p>We accept debit and credit cards, except American Express and Paypal (or similar institutions.)</p>
+            <p>As of January 1st, 2019, we only accept cash (US dollars). No credit or debit cards</p>
         </div>
         <div class="col-md-6">
             <h2>What We Don't Do</h2>
             <ul>
-                <li>We do not accept checks, paypal,American Express, bitcoin (or the like,) foreign currency, or barter.</li>
+                <li>We do not accept cards, checks,paypal, bitcoin (or the like,) foreign currency, or barter.</li>
                 <li>We do not allow customers to 'ride along' on deliveries, nor does our service charge to deliver people to a location.</li>
                 <li>We do not currently deliver age restricted items (adult material, cigarettes, alcohol.)</li>
             </ul>
